Add merch booth
